--- a/locales/en.json
+++ b/locales/en.json
@@ -12,7 +12,7 @@
     "haveStrategiesAndFun": "Have strategies and have fun! :D",
     "home": "Home",
     "language": "Language",
-    "level": "Level{{num}}",
+    "level": "Level {{num}}",
     "loots": "Loots",
     "mechanismHint": "Mechanism Hint",
     "mechanismReveal": "Season 1 Launch: Mechanism Reveal",
@@ -27,6 +27,7 @@
     "spaceships": "Spaceships",
     "rewards": "Rewards",
     "seven": 7,
+    "six": 6,
     "startGame": "Let's start the game!",
     "supportedNetworks": "Supported Networks",
     "switchAccounts": "Switch Accounts",
