--- a/locales/zh.json
+++ b/locales/zh.json
@@ -26,6 +26,7 @@
     "publicMint": "公共铸币",
     "rewards": "奖励",
     "seven": "七",
+    "six": "六",
     "spaceships": "",
     "startGame": "开始游戏吧!",
     "supportedNetworks": "支持的网络",
