feat: change text

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -33,7 +33,7 @@
     "switchToPolygon": "Switch to Polygon Network",
     "theme": "Theme",
     "timeline": "Timeline",
-    "weBuildGames": "We build strategy games",
+    "weBuildGames": "We Build Strategy Games",
     "wrongNetwork": "Unsupported Network!",
     "wrongNetworkSwitchPrompt": "You are connected on the {{networkName}} network. Please connect to the Polygon network.",
     "youAreConnected": "You are connected to the Polygon Network",
